--- a/Kaggle_Titanic.ipynb
+++ b/Kaggle_Titanic.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Titanic Survival Prediction: End-to-End ML Workflow (Top 6%)"
+    "# Titanic Survival Prediction: End-to-End ML Workflow"
    ]
   },
   {
@@ -4749,7 +4749,9 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# A list of machine learning algorithms that will be optimized\n",
